// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceFooter Component default case should render 1`] = `
<div
  className="source-footer"
>
  <span
    className="cursor-position"
    title="(Line 2, column 2)"
  >
    (2, 2)
  </span>
  <PaneToggleButton
    collapsed={false}
    horizontal={false}
    key="toggle"
    position="end"
  />
</div>
`;

exports[`SourceFooter Component move cursor should render new cursor position 1`] = `
<div
  className="source-footer"
>
  <span
    className="cursor-position"
    title="(Line 6, column 11)"
  >
    (6, 11)
  </span>
  <PaneToggleButton
    collapsed={false}
    horizontal={false}
    key="toggle"
    position="end"
  />
</div>
`;
